--- a/notebook/classification.ipynb
+++ b/notebook/classification.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -119,7 +119,12 @@
     "\n",
     "The algorithms that are used for constructing decision trees usually work top-down by choosing a variable at each step that is the next best variable to use in splitting the set of items. \"Best\" is defined by how well the variable splits the set into homogeneous subsets that have the same value of the target variable. Different algorithms use different formulae for measuring \"best\". Used by the CART (Classification and Regression Tree) algorithm, Gini impurity is a measure of how often a randomly chosen element from the set would be incorrectly labeled if it were randomly labeled according to the distribution of labels in the subset. Gini impurity can be computed by summing the probability of each item being chosen times the probability of a mistake in categorizing that item. It reaches its minimum (zero) when all cases in the node fall into a single target category. Information gain is another popular measure, used by the ID3, C4.5 and C5.0 algorithms. Information gain is based on the concept of entropy used in information theory. For categorical variables with different number of levels, however, information gain are biased in favor of those attributes with more levels. Instead, one may employ the information gain ratio, which solves the drawback of information gain.\n",
     "```\n",
-    "      def cart(formula: Formula, data: DataFrame, splitRule: SplitRule = SplitRule.GINI, maxDepth: Int = 20, maxNodes: Int = 0, nodeSize: Int = 5): DecisionTree\n",
+    "def cart(formula: Formula,\n",
+    "         data: DataFrame,\n",
+    "         splitRule: SplitRule = SplitRule.GINI,\n",
+    "         maxDepth: Int = 20,\n",
+    "         maxNodes: Int = 0,\n",
+    "         nodeSize: Int = 5): DecisionTree\n",
     "``` \n",
     "where `maxDepth` controls the maximum depth of the tree as a way of regularization. Similarly, the parameter `maxNodes`, if positive, is the maximum number of leaf nodes in the tree as a regularization control. If 0 or negative, `maxNodes` will be ignored. The parameter `nodeSize` controls the minimum number of samples in the leaf nodes."
    ]
@@ -295,7 +300,11 @@
     "\n",
     "Logistic regression (logit model) is a generalized linear model used for binomial regression. Logistic regression applies maximum likelihood estimation after transforming the dependent into a logit variable. A logit is the natural log of the odds of the dependent equaling a certain value or not (usually 1 in binary logistic models, the highest value in multinomial models). In this way, logistic regression estimates the odds of a certain event (value) occurring.\n",
     "```\n",
-    "    def logit(x: Array[Array[Double]], y: Array[Int], lambda: Double = 0.0, tol: Double = 1E-5, maxIter: Int = 500): LogisticRegression\n",
+    "def logit(x: Array[Array[Double]],\n",
+    "          y: Array[Int],\n",
+    "          lambda: Double = 0.0,\n",
+    "          tol: Double = 1E-5,\n",
+    "          maxIter: Int = 500): LogisticRegression\n",
     "```\n",
     "where the parameter `lambda` (> 0) gives a \"regularized\" estimate of linear weights which often has superior generalization performance, especially when the dimensionality is high."
    ]
