--- a/notebook/clustering.ipynb
+++ b/notebook/clustering.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -45,10 +45,7 @@
     "import smile.plot.swing.Palette.{DARK_RED, VIOLET_RED, DARK_GREEN, LIGHT_GREEN, PASTEL_GREEN, FOREST_GREEN, GRASS_GREEN, NAVY_BLUE, SLATE_BLUE, ROYAL_BLUE, CADET_BLUE, MIDNIGHT_BLUE, SKY_BLUE, STEEL_BLUE, DARK_BLUE, DARK_MAGENTA, DARK_CYAN, PURPLE, LIGHT_PURPLE, DARK_PURPLE, GOLD, BROWN, SALMON, TURQUOISE, BURGUNDY, PLUM}\n",
     "import smile.plot.swing._\n",
     "import smile.plot.show\n",
-    "\n",
-    "implicit def render(canvas: Canvas): Unit = {\n",
-    "  publish.html(smile.plot.swing.canvas2Image(canvas))\n",
-    "}"
+    "import smile.plot.Render._"
    ]
   },
   {
@@ -101,7 +98,7 @@
    "outputs": [],
    "source": [
     "val clusters = kmeans(x, 6, runs = 20)\n",
-    "show(plot(x, clusters.y, '.', Palette.COLORS))"
+    "show(plot(x, clusters.y, '.'))"
    ]
   },
   {
@@ -119,7 +116,7 @@
    "source": [
     "val elongate = read.csv(\"data/clustering/gaussian/elongate.txt\", header = false, delimiter = '\\t').toArray\n",
     "val clusters = kmeans(elongate, 2, runs = 20)\n",
-    "show(plot(elongate, clusters.y, '.', Palette.COLORS))"
+    "show(plot(elongate, clusters.y, '.'))"
    ]
   },
   {
@@ -145,7 +142,7 @@
    "outputs": [],
    "source": [
     "val clusters = xmeans(x, 50)\n",
-    "show(plot(x, clusters.y, '.', Palette.COLORS))"
+    "show(plot(x, clusters.y, '.'))"
    ]
   },
   {
@@ -164,7 +161,7 @@
    "outputs": [],
    "source": [
     "val clusters = gmeans(x, 50)\n",
-    "show(plot(x, clusters.y, '.', Palette.COLORS))"
+    "show(plot(x, clusters.y, '.'))"
    ]
   },
   {
@@ -196,7 +193,7 @@
    "outputs": [],
    "source": [
     "val clusters = dac(x, 12, 0.9)\n",
-    "show(plot(x, clusters.y, '.', Palette.COLORS))"
+    "show(plot(x, clusters.y, '.'))"
    ]
   },
   {
@@ -254,7 +251,7 @@
    "outputs": [],
    "source": [
     "val clusters = clarans(x, new EuclideanDistance(), 6, 10, 20)\n",
-    "show(plot(x, clusters.y, '.', Palette.COLORS))"
+    "show(plot(x, clusters.y, '.'))"
    ]
   },
   {
@@ -265,13 +262,13 @@
     "\n",
     "DBSCAN (Density-Based Spatial Clustering of Applications with Noise) finds a number of clusters starting from the estimated density distribution of corresponding nodes.\n",
     "```\n",
-    "    // DBSCAN with a customized data structure for neighborhood search\n",
-    "    def dbscan[T](data: Array[T], nns: RNNSearch[T, T], minPts: Int, radius: Double): DBSCAN[T]\n",
+    "// DBSCAN with a customized data structure for neighborhood search\n",
+    "def dbscan[T](data: Array[T], nns: RNNSearch[T, T], minPts: Int, radius: Double): DBSCAN[T]\n",
     "\n",
-    "    def dbscan[T](data: Array[T], distance: Metric[T], minPts: Int, radius: Double): DBSCAN[T]\n",
+    "def dbscan[T](data: Array[T], distance: Metric[T], minPts: Int, radius: Double): DBSCAN[T]\n",
     "\n",
-    "    // DBSCAN with Euclidean distance\n",
-    "    def dbscan(data: Array[Array[Double]], minPts: Int, radius: Double): DBSCAN[Array[Double]]\n",
+    "// DBSCAN with Euclidean distance\n",
+    "def dbscan(data: Array[Array[Double]], minPts: Int, radius: Double): DBSCAN[Array[Double]]\n",
     "``` \n",
     "DBSCAN requires two parameters: radius (i.e. neighborhood radius) and the number of minimum points required to form a cluster (minPts). It starts with an arbitrary starting point that has not been visited. This point's neighborhood is retrieved, and if it contains sufficient number of points, a cluster is started. Otherwise, the point is labeled as noise. Note that this point might later be found in a sufficiently sized radius-environment of a different point and hence be made part of a cluster.\n",
     "\n",
@@ -288,7 +285,7 @@
    "source": [
     "val t48 = read.csv(\"data/clustering/chameleon/t4.8k.txt\", header = false, delimiter = ' ').toArray\n",
     "val clusters = dbscan(t48, 20, 10)\n",
-    "show(plot(t48, clusters.y, '.', Palette.COLORS))"
+    "show(plot(t48, clusters.y, '.'))"
    ]
   },
   {
@@ -306,7 +303,7 @@
     "\n",
     "DENCLUE (DENsity CLUstering) employs a cluster model based on kernel density estimation. A cluster is defined by a local maximum of the estimated density function. Data points going to the same local maximum are put into the same cluster. DENCLUE works efficiently for high-dimensional data sets and allows arbitrary noise levels while still guaranteeing to find the clustering.\n",
     "```\n",
-    "    def denclue(data: Array[Array[Double]], sigma: Double, m: Int): DENCLUE\n",
+    "def denclue(data: Array[Array[Double]], sigma: Double, m: Int): DENCLUE\n",
     "``` \n",
     "The parameter sigma is the smooth parameter in the Gaussian kernel. The user can choose sigma such that number of density attractors is constant for a long interval of sigma. The parameter m is the number of selected samples used in the iteration. This number should be much smaller than the number of data points to speed up the algorithm. It should also be large enough to capture the sufficient information of underlying distribution.\n",
     "\n",
@@ -320,7 +317,7 @@
    "outputs": [],
    "source": [
     "val clusters = denclue(x, 1.0, 50)\n",
-    "show(plot(x, clusters.y, '.', Palette.COLORS))"
+    "show(plot(x, clusters.y, '.'))"
    ]
   },
   {
@@ -331,12 +328,12 @@
     "\n",
     "Given a set of data points, the similarity matrix may be defined as a matrix S where Sij represents a measure of the similarity between points. Spectral clustering techniques make use of the spectrum of the similarity matrix of the data to perform dimensionality reduction for clustering in fewer dimensions. Then the clustering will be performed in the dimension-reduce space, in which clusters of non-convex shape may become tight. There are some intriguing similarities between spectral clustering methods and kernel PCA, which has been empirically observed to perform clustering.\n",
     "```\n",
-    "    def specc(W: Array[Array[Double]], k: Int): SpectralClustering\n",
+    "def specc(W: Array[Array[Double]], k: Int): SpectralClustering\n",
     "\n",
-    "    def specc(data: Array[Array[Double]], k: Int, sigma: Double): SpectralClustering\n",
+    "def specc(data: Array[Array[Double]], k: Int, sigma: Double): SpectralClustering\n",
     "\n",
-    "    // Nystrom approximation\n",
-    "    def specc(data: Array[Array[Double]], k: Int, l: Int, sigma: Double): SpectralClustering\n",
+    "// Nystrom approximation\n",
+    "def specc(data: Array[Array[Double]], k: Int, l: Int, sigma: Double): SpectralClustering\n",
     "```    \n",
     "where W is the adjacency matrix of graph. The user may also provides the raw input data and the smooth/width parameter sigma of Gaussian kernel, which is a somewhat sensitive parameter. To search for the best setting, one may pick the value that gives the tightest clusters (smallest distortion, reported by the method distortion) in feature space. Spectral clustering is memory intensive because of the adjacency matrix. For large data, one may use Nystrom approximation by selecting some random samples. The parameter l specifies the number of random samples."
    ]
@@ -349,7 +346,7 @@
    "source": [
     "val sincos = read.csv(\"data/clustering/nonconvex/sincos.txt\", header = false, delimiter = '\\t').toArray\n",
     "val clusters = specc(sincos, 2, 0.2)\n",
-    "show(plot(sincos, clusters.y, 'o', Palette.COLORS))"
+    "show(plot(sincos, clusters.y, 'o'))"
    ]
   },
   {
@@ -362,10 +359,10 @@
     "\n",
     "This method performs very well especially when the exact number of clusters is unknown. The method can also correctly reveal the structure of data and effectively identify outliers simultaneously.\n",
     "```\n",
-    "    def mec[T](data: Array[T], distance: Distance[T], k: Int, radius: Double): MEC[T]\n",
-    "    def mec[T](data: Array[T], distance: Metric[T], k: Int, radius: Double): MEC[T]\n",
-    "    def mec[T](data: Array[T], nns: RNNSearch[T, T], k: Int, radius: Double, y: Array[Int]): MEC[T]\n",
-    "    def mec(data: Array[Array[Double]], k: Int, radius: Double): MEC[Array[Double]]\n",
+    "def mec[T](data: Array[T], distance: Distance[T], k: Int, radius: Double): MEC[T]\n",
+    "def mec[T](data: Array[T], distance: Metric[T], k: Int, radius: Double): MEC[T]\n",
+    "def mec[T](data: Array[T], nns: RNNSearch[T, T], k: Int, radius: Double, y: Array[Int]): MEC[T]\n",
+    "def mec(data: Array[Array[Double]], k: Int, radius: Double): MEC[Array[Double]]\n",
     "``` \n",
     "MEC is an iterative algorithm starting with an initial partition given by any other clustering methods, e.g. K-Means, CLARNAS, hierarchical clustering, etc. Note that a random initialization is NOT appropriate."
    ]
@@ -377,7 +374,7 @@
    "outputs": [],
    "source": [
     "val clusters = mec(x, 20, 2.0)\n",
-    "show(plot(x, clusters.y, '.', Palette.COLORS))"
+    "show(plot(x, clusters.y, '.'))"
    ]
   },
   {
