--- a/notebook/data.ipynb
+++ b/notebook/data.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -100,7 +100,7 @@
    "source": [
     "## Apache Parquet\n",
     "\n",
-    "Apache Parquet is a columnar storage format that supports nested data structures. It uses the record shredding and assembly algorithm described in the Dremel paper."
+    "Apache Parquet is a columnar storage format that supports nested data structures. It uses the record shredding and assembly algorithm described in the Dremel paper. To read Parquet files, its library and related Hadoop libraries should be provided. Since we don't ship these libraries with Smile, we import them explicitly in the below."
    ]
   },
   {
@@ -109,6 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import $ivy.`org.apache.parquet:parquet-hadoop:1.10.1`\n",
+    "import $ivy.`org.apache.hadoop:hadoop-common:3.0.0`\n",
+    "\n",
     "val userdata1 = read.parquet(\"data/parquet/userdata1.parquet\")\n",
     "display(userdata1)"
    ]
@@ -128,6 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import $ivy.`org.apache.avro:avro:1.8.2`\n",
+    "\n",
     "val stream = Files.newInputStream(Paths.get(\"data/avro/userdata.avsc\"))\n",
     "val schema = new org.apache.avro.Schema.Parser().parse(stream)\n",
     "val userdata1 = read.avro(\"data/avro/userdata1.avro\", schema)\n",
@@ -234,7 +239,12 @@
     "The delimited text files are widely used in machine learning research community. The comma-separated values (CSV) file is a special case. Smile provides flexible parser for them.\n",
     "\n",
     "```\n",
-    "def csv(file: String, delimiter: Char = ',', header: Boolean = true, quote: Char = '\"', escape: Char = '\\\\', schema: StructType = null): DataFrame\n",
+    "def csv(file: String,\n",
+    "        delimiter: Char = ',',\n",
+    "        header: Boolean = true,\n",
+    "        quote: Char = '\"',\n",
+    "        escape: Char = '\\\\',\n",
+    "        schema: StructType = null): DataFrame\n",
     "```"
    ]
   },
