--- a/notebook/mds.ipynb
+++ b/notebook/mds.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -55,10 +55,7 @@
     "import smile.plot.swing.Palette.{DARK_RED, VIOLET_RED, DARK_GREEN, LIGHT_GREEN, PASTEL_GREEN, FOREST_GREEN, GRASS_GREEN, NAVY_BLUE, SLATE_BLUE, ROYAL_BLUE, CADET_BLUE, MIDNIGHT_BLUE, SKY_BLUE, STEEL_BLUE, DARK_BLUE, DARK_MAGENTA, DARK_CYAN, PURPLE, LIGHT_PURPLE, DARK_PURPLE, GOLD, BROWN, SALMON, TURQUOISE, BURGUNDY, PLUM}\n",
     "import smile.plot.swing._\n",
     "import smile.plot.show\n",
-    "\n",
-    "implicit def render(canvas: Canvas): Unit = {\n",
-    "  publish.html(smile.plot.swing.canvas2Image(canvas))\n",
-    "}"
+    "import smile.plot.Render._"
    ]
   },
   {
