--- a/notebook/plot-swing.ipynb
+++ b/notebook/plot-swing.ipynb
@@ -12,19 +12,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, let's import Smile and also add an `implict` function to display Swing's `JComponent` in almond. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import java.lang.Math._\n",
@@ -36,14 +29,7 @@
     "import smile.math.matrix._\n",
     "import smile.stat.distribution._\n",
     "import smile._\n",
-    "\n",
-    "implicit def render(canvas: Canvas): Unit = {\n",
-    "  publish.html(smile.plot.swing.canvas2Image(canvas))\n",
-    "}\n",
-    "\n",
-    "implicit def render(comp: javax.swing.JComponent): Unit = {\n",
-    "  publish.html(smile.plot.swing.component2Image(comp, 1000, 1000))\n",
-    "}"
+    "import smile.plot.Render._"
    ]
   },
   {
@@ -157,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show(plot(iris, \"class\", '*'))"
+    "show(splom(iris, '*', \"class\"))"
    ]
   },
   {
