--- a/notebook/regression.ipynb
+++ b/notebook/regression.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -51,7 +51,7 @@
     "\n",
     "The ordinary least squares (OLS) estimator is consistent when the independent variables are exogenous and there is no multicollinearity, and optimal in the class of linear unbiased estimators when the errors are homoscedastic and serially uncorrelated. Under these conditions, the method of OLS provides minimum-variance mean-unbiased estimation when the errors have finite variances.\n",
     "```\n",
-    "    def ols(formula: Formula, data: DataFrame, method: String = \"qr\", stderr: Boolean = true, recursive: Boolean = true): LinearModel\n",
+    "def ols(formula: Formula, data: DataFrame, method: String = \"qr\", stderr: Boolean = true, recursive: Boolean = true): LinearModel\n",
     "``` \n",
     "There are several different frameworks in which the linear regression model can be cast in order to make the OLS technique applicable. Each of these settings produces the same formulas and same results, the only difference is the interpretation and the assumptions which have to be imposed in order for the method to give meaningful results. The choice of the applicable framework depends mostly on the nature of data at hand, and on the inference task which has to be performed.\n",
     "\n",
@@ -107,7 +107,7 @@
     "\n",
     "Another interpretation of ridge regression is available through Bayesian estimation. In this setting the belief that weight should be small is coded into a prior distribution.\n",
     "```\n",
-    "    def ridge(formula: Formula, data: DataFrame, lambda: Double): LinearModel\n",
+    "def ridge(formula: Formula, data: DataFrame, lambda: Double): LinearModel\n",
     "``` \n",
     "where the parameter x is a matrix containing the explanatory variables, y is the response values, and lambda is the shrinkage/regularization parameter. Large lambda means more shrinkage. Choosing an appropriate value of lambda is important, and also difficult.\n",
     "\n",
@@ -136,7 +136,7 @@
     "\n",
     "There is no analytic formula or expression for the optimal solution to the L1-regularized least squares problems. Therefore, its solution must be computed numerically. The objective function in the L1-regularized least squares is convex but not differentiable, so solving it is more of a computational challenge than solving the L2-regularized least squares. The Lasso may be solved using quadratic programming or more general convex optimization methods, as well as by specific algorithms such as the least angle regression algorithm.\n",
     "```\n",
-    "    def lasso(formula: Formula, data: DataFrame, lambda: Double, tol: Double = 1E-3, maxIter: Int = 5000): LinearModel\n",
+    "def lasso(formula: Formula, data: DataFrame, lambda: Double, tol: Double = 1E-3, maxIter: Int = 5000): LinearModel\n",
     "``` \n",
     "where the parameter x is a matrix containing the explanatory variables, y is the response values, lambda is the shrinkage/regularization parameter, tol is the tolerance for stopping iterations (relative target duality gap), and maxIter is the maximum number of iterations.\n",
     "\n",
@@ -175,9 +175,9 @@
     "\n",
     "A optional third backpropagation step can be performed to fine-tune all of the RBF network's parameters.\n",
     "```\n",
-    "    def rbfnet[T](x: Array[T], y: Array[Double], neurons: Array[RBF[T]], normalized: Boolean): RBFNetwork[T]\n",
+    "def rbfnet[T](x: Array[T], y: Array[Double], neurons: Array[RBF[T]], normalized: Boolean): RBFNetwork[T]\n",
     "\n",
-    "    def rbfnet(x: Array[Array[Double]], y: Array[Double], k: Int, normalized: Boolean = false): RBFNetwork[Array[Double]]\n",
+    "def rbfnet(x: Array[Array[Double]], y: Array[Double], k: Int, normalized: Boolean = false): RBFNetwork[Array[Double]]\n",
     "``` \n",
     "The popular choices for `φ` comprise the Gaussian function and the so called thin plate splines. The advantage of the thin plate splines is that their conditioning is invariant under scalings. Gaussian, multi-quadric and inverse multi-quadric are infinitely smooth and and involve a scale or shape parameter, `r0 > 0`. Decreasing `r0` tends to flatten the basis function. For a given function, the quality of approximation may strongly depend on this parameter. In particular, increasing `r0` has the effect of better conditioning (the separation distance of the scaled points increases)."
    ]
@@ -203,7 +203,12 @@
     "\n",
     "Like SVM for classification, nonlinear SVR employs kernel trick for implict mapping. And the model produced by SVR depends only on a subset of the training data, because the cost function ignores any training data close to the model prediction (within the ε threshold).\n",
     "```\n",
-    "    def svr[T](x: Array[T], y: Array[Double], kernel: MercerKernel[T], eps: Double, C: Double, tol: Double = 1E-3): KernelMachine[T]\n",
+    "def svr[T](x: Array[T],\n",
+    "           y: Array[Double],\n",
+    "           kernel: MercerKernel[T],\n",
+    "           eps: Double,\n",
+    "           C: Double,\n",
+    "           tol: Double = 1E-3): KernelMachine[T]\n",
     "``` \n",
     "where the parameter `x` is the training data, y is the response variable, kernel is the kernel function, eps is the loss function error threshold, `C` is the soft margin penalty parameter, weight is the optional positive instance weight so that the soft margin penalty parameter for instance `i` will be `weight(i) * C`, and tol the tolerance of convergence test."
    ]
@@ -227,7 +232,11 @@
     "\n",
     "The algorithms that are used for constructing decision trees usually work top-down by choosing a variable at each step that is the next best variable to use in splitting the set of items. \"Best\" is defined by how well the variable splits the set into homogeneous subsets that have the same value of the target variable. Different algorithms use different formulae for measuring \"best\". Used by the CART algorithm, Gini impurity is a measure of how often a randomly chosen element from the set would be incorrectly labeled if it were randomly labeled according to the distribution of labels in the subset. Gini impurity can be computed by summing the probability of each item being chosen times the probability of a mistake in categorizing that item. It reaches its minimum (zero) when all cases in the node fall into a single target category. Information gain is another popular measure, used by the ID3, C4.5 and C5.0 algorithms. Information gain is based on the concept of entropy used in information theory. For categorical variables with different number of levels, however, information gain are biased in favor of those attributes with more levels. Instead, one may employ the information gain ratio, which solves the drawback of information gain.\n",
     "```\n",
-    "    def cart(formula: Formula, data: DataFrame, maxDepth: Int = 20, maxNodes: Int = 0, nodeSize: Int = 5): RegressionTree\n",
+    "def cart(formula: Formula,\n",
+    "         data: DataFrame,\n",
+    "         maxDepth: Int = 20,\n",
+    "         maxNodes: Int = 0,\n",
+    "         nodeSize: Int = 5): RegressionTree\n",
     "``` \n",
     "where the parameter x is the training data, y is the response variable, maxNodes is the maximum number of leaf nodes in the tree as a regularization, and The optional attributes is the attribute properties. If not provided, all attributes are treated as numeric values."
    ]
@@ -256,7 +265,14 @@
     "- Each tree is grown to the largest extent possible. There is no pruning.\n",
     "\n",
     "```\n",
-    "    def randomForest(formula: Formula, data: DataFrame, ntrees: Int = 500, mtry: Int = 0, maxDepth: Int = 20, maxNodes: Int = 0, nodeSize: Int = 5, subsample: Double = 1.0): RandomForest\n",
+    "def randomForest(formula: Formula,\n",
+    "                 data: DataFrame,\n",
+    "                 ntrees: Int = 500,\n",
+    "                 mtry: Int = 0,\n",
+    "                 maxDepth: Int = 20,\n",
+    "                 maxNodes: Int = 0,\n",
+    "                 nodeSize: Int = 5,\n",
+    "                 subsample: Double = 1.0): RandomForest\n",
     "``` \n",
     "where ntrees is the number of trees, nodeSize is the number of instances in a node below which the tree will not split, setting `nodeSize = 5` generally gives good results, and maxNodes is the maximum number of leaf nodes. The parameter mtry is the number of input variables to be used to determine the decision at a node of the tree. The default value `p/3` seems to give generally good performance, where p is the number of variables. Besides, subsample is the sampling rate for training tree. The default value 1.0 means sampling with replacement. Otherwise, the value < 1.0 means sampling without replacement. The optional attributes is the attribute properties. If not provided, all attributes are treated as numeric values."
    ]
@@ -284,7 +300,15 @@
     "\n",
     "Another regularization approach is the shrinkage which times a parameter η (called the \"learning rate\") to update term. Empirically it has been found that using small learning rates (such as η < 0.1) yields dramatic improvements in model's generalization ability over gradient boosting without shrinking (`η = 1`). However, it comes at the price of increasing computational time both during training and prediction: lower learning rate requires more iterations.\n",
     "```\n",
-    "    def gbm(formula: Formula, data: DataFrame, loss: Loss = Loss.ls(), ntrees: Int = 500, maxDepth: Int = 20, maxNodes: Int = 6, nodeSize: Int = 5, shrinkage: Double = 0.05, subsample: Double = 0.7): GradientTreeBoost\n",
+    "def gbm(formula: Formula,\n",
+    "        data: DataFrame,\n",
+    "        loss: Loss = Loss.lad(),\n",
+    "        ntrees: Int = 500,\n",
+    "        maxDepth: Int = 20,\n",
+    "        maxNodes: Int = 6,\n",
+    "        nodeSize: Int = 5,\n",
+    "        shrinkage: Double = 0.05,\n",
+    "        subsample: Double = 0.7): GradientTreeBoost\n",
     "``` \n",
     "where the parameter x is the training data, y is the response variable, ntrees is the number of trees, and maxNodes is the maximum number of leaf nodes. The parameter loss is the loss function for regression. By default, least absolute deviation is employed for robust regression. The parameter shrinkage is the shrinkage parameter in (0, 1] controls the learning rate of procedure. Besides, subsample is the sampling rate for training tree. The default value 1.0 means sampling with replacement. Otherwise, the value < 1.0 means sampling without replacement. The optional attributes is the attribute properties. If not provided, all attributes are treated as numeric values."
    ]
@@ -312,14 +336,14 @@
     "\n",
     "A significant problem with Gaussian process prediction is that it typically scales as `O(n3)`. For large problems (e.g. `n > 10,000`) both storing the Gram matrix and solving the associated linear systems are prohibitive on modern workstations. An extensive range of proposals have been suggested to deal with this problem. A popular approach is the reduced-rank Approximations of the Gram Matrix, known as Nystrom approximation. Greedy approximation is another popular approach that uses an active set of training points of size m selected from the training set of size n > m. We assume that it is impossible to search for the optimal subset of size m due to combinatorics. The points in the active set could be selected randomly, but in general we might expect better performance if the points are selected greedily w.r.t. some criterion. Recently, researchers had proposed relaxing the constraint that the inducing variables must be a subset of training/test cases, turning the discrete selection problem into one of continuous optimization.\n",
     "```\n",
-    "    object gpr {\n",
-    "        // regular Gaussian process model\n",
-    "        def apply[T](x: Array[T], y: Array[Double], kernel: MercerKernel[T], lambda: Double): KernelMachine[T]\n",
-    "        // approximate Gaussian process model\n",
-    "        def approx[T](x: Array[T], y: Array[Double], t: Array[T], kernel: MercerKernel[T], lambda: Double): KernelMachine[T]\n",
-    "        // Nystrom approximation\n",
-    "        def nystrom[T](x: Array[T], y: Array[Double], t: Array[T], kernel: MercerKernel[T], lambda: Double): KernelMachine[T]\n",
-    "    }\n",
+    "object gpr {\n",
+    "  // regular Gaussian process model\n",
+    "  def apply[T](x: Array[T], y: Array[Double], kernel: MercerKernel[T], lambda: Double): KernelMachine[T]\n",
+    "  // approximate Gaussian process model\n",
+    "  def approx[T](x: Array[T], y: Array[Double], t: Array[T], kernel: MercerKernel[T], lambda: Double): KernelMachine[T]\n",
+    "  // Nystrom approximation\n",
+    "  def nystrom[T](x: Array[T], y: Array[Double], t: Array[T], kernel: MercerKernel[T], lambda: Double): KernelMachine[T]\n",
+    "}\n",
     "```\n",
     "where the parameter `x` is the training data, `y` is the response variable, `kernel` is the Mercer kernel function, and `lambda` is the shrinkage/regularization parameter. The last two methods fit approximate models. For approximation models, the parameter t is the inducing input, which are pre-selected or inducing samples acting as active set of regressors. In simple case, these can be chosen randomly from the training set or as the centers of k-means clustering."
    ]
