--- a/notebook/wavelet.ipynb
+++ b/notebook/wavelet.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30` \n",
     "\n",
     "import smile.wavelet._"
@@ -156,10 +156,7 @@
    "source": [
     "import smile.plot.swing._\n",
     "import smile.plot.show\n",
-    "\n",
-    "implicit def render(canvas: Canvas): Unit = {\n",
-    "  publish.html(smile.plot.swing.canvas2Image(canvas))\n",
-    "}\n",
+    "import smile.plot.Render._\n",
     "\n",
     "val canvas = LinePlot.of(sp500).canvas\n",
     "canvas.add(LinePlot.of(smooth, java.awt.Color.BLUE))\n",
