--- a/notebook/interpolation.ipynb
+++ b/notebook/interpolation.ipynb
@@ -16,17 +16,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30` \n",
     "\n",
     "import java.awt.Color.{BLACK, BLUE, CYAN, DARK_GRAY, GRAY, GREEN, LIGHT_GRAY, MAGENTA, ORANGE, PINK, RED, WHITE, YELLOW}\n",
     "import smile.interpolation._\n",
     "import smile.plot.swing._\n",
     "import smile.plot.show\n",
-    "\n",
-    "implicit def render(canvas: Canvas): Unit = {\n",
-    "  publish.html(smile.plot.swing.canvas2Image(canvas))\n",
-    "}"
+    "import smile.plot.Render._"
    ]
   },
   {
