--- a/notebook/plot-vega.ipynb
+++ b/notebook/plot-vega.ipynb
@@ -4,15 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Visualization with Vega\n",
+    "# Declarative Visualization\n",
     "\n",
     "A picture is worth a thousand words. In machine learning, we usually handle high-dimensional data, which is impossible to draw on display directly. But a variety of statistical plots are tremendously valuable for us to grasp the characteristics of many data points. Smile provides data visualization tools such as plots and maps for researchers to understand information more easily and quickly.\n",
     "\n",
-    "[Vega](https://vega.github.io/vega/) is a visualization grammar, a declarative language for creating, saving, and sharing interactive visualization designs. With Vega, you can describe the visual appearance and interactive behavior of a visualization in a JSON format, and generate web-based views using Canvas or SVG.\n",
+    "With `smile.plot.vega` package, we can create a specification that describes visualizations as mappings from data to properties of graphical marks (e.g., points or bars). The specification is based on [Vega-Lite](https://vega.github.io/vega-lite). The Vega-Lite compiler automatically produces visualization components including axes, legends, and scales. It then determines properties of these components based on a set of carefully designed rules.\n",
     "\n",
-    "[Vega-Lite](https://vega.github.io/vega-lite/) is a high-level grammar of interactive graphics. It provides a concise JSON syntax for rapidly generating visualizations to support analysis. Vega-Lite specifications can be compiled to Vega specifications.\n",
-    "\n",
-    "The package `smile.plot.vega` provides an easy way to define Vega-Lite view specifications."
+    "This approach allows specifications to be succinct and expressive, but also provide user control. As Vega-Lite is designed for analysis, it supports data transformations such as aggregation, binning, filtering, sorting, and visual transformations including stacking and faceting. Moreover, Vega-Lite specifications can be composed into layered and multi-view displays, and made interactive with selections."
    ]
   },
   {
@@ -668,7 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val rollingAverage = VegaLite.layer(\n",
+    "val rollingAverages = VegaLite.layer(\n",
     "    \"https://vega.github.io/vega-lite/examples/data/seattle-weather.csv\",\n",
     "    \"csv\",\n",
     "    VegaLite.view().\n",
@@ -695,7 +693,7 @@
     "    }\"\"\"\n",
     "  )\n",
     "\n",
-    "show(rollingAverage)"
+    "show(rollingAverages)"
    ]
   },
   {
@@ -842,7 +840,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vertical Concatenation"
+    "## Horizontal Concatenation"
    ]
   },
   {
