--- a/notebook/plot-vega.ipynb
+++ b/notebook/plot-vega.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Declarative Visualization\n",
+    "# Declarative Data Visualization\n",
     "\n",
     "A picture is worth a thousand words. In machine learning, we usually handle high-dimensional data, which is impossible to draw on display directly. But a variety of statistical plots are tremendously valuable for us to grasp the characteristics of many data points. Smile provides data visualization tools such as plots and maps for researchers to understand information more easily and quickly.\n",
     "\n",
