ivy import arrow

--- a/notebook/data.ipynb
+++ b/notebook/data.ipynb
@@ -158,6 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import $ivy.`org.apache.arrow:arrow-memory:0.16.0`\n",
+    "import $ivy.`org.apache.arrow:arrow-vector:0.16.0`\n",
     "import $ivy.`org.xerial:sqlite-jdbc:3.28.0`\n",
     "\n",
     "// load SQLite JDBC driver\n",
