update avro example

--- a/notebook/data.ipynb
+++ b/notebook/data.ipynb
@@ -132,10 +132,9 @@
    "outputs": [],
    "source": [
     "import $ivy.`org.apache.avro:avro:1.8.2`\n",
+    "import $ivy.`org.apache.hadoop:hadoop-common:3.0.0`\n",
     "\n",
-    "val stream = Files.newInputStream(Paths.get(\"data/avro/userdata.avsc\"))\n",
-    "val schema = new org.apache.avro.Schema.Parser().parse(stream)\n",
-    "val userdata1 = read.avro(\"data/avro/userdata1.avro\", schema)\n",
+    "val userdata1 = read.avro(\"data/avro/userdata1.avro\", \"data/avro/userdata.avsc\")\n",
     "display(userdata1)"
    ]
   },
