--- a/shell/src/universal/notebooks/data.ipynb
+++ b/shell/src/universal/notebooks/data.ipynb
@@ -43,9 +43,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parsers\n",
+    "# Data Loading\n",
     "\n",
-    "Smile provides a couple of parsers for popular data formats, such as Parquet, Avro, Arrow, SAS7BDAT, Weka's ARFF files, LibSVM's file format, delimited text files, JSON, and binary sparse data. We will demonstrate these parsers with the sample data in the data directory. In Scala API, the parsing functions are in the `smile.read` object. Firstly, let's import Smile's Scala API."
+    "Smile provides a variety of data loading utilities for popular data formats, such as Parquet, Avro, Arrow, SAS7BDAT, Weka's ARFF files, LibSVM's file format, delimited text files, JSON, and binary sparse data. We will demonstrate these parsers with the sample data in the data directory. In Scala API, the parsing functions are in the `smile.read` object. Firstly, let's import Smile's Scala API."
    ]
   },
   {
