--- a/shell/src/universal/notebooks/index.ipynb
+++ b/shell/src/universal/notebooks/index.ipynb
@@ -15,7 +15,7 @@
     "manifold learning, multidimensional scaling, genetic algorithms,\n",
     "missing value imputation, efficient nearest neighbor search, etc.\n",
     "\n",
-    "Smile is well documented and please check out the [project website](http://haifengl.github.io/)\n",
+    "Smile is well documented and please check out the project [website](http://haifengl.github.io/)\n",
     "for programming guides and more information."
    ]
   },
@@ -28,7 +28,7 @@
     "A list of Jupyter notebooks demonstrating Smile.\n",
     "\n",
     "### Data\n",
-    "* [Data](data.ipynb)\n",
+    "* [Data Loading](data-io.ipynb)\n",
     "* [Data Frame](data-frame.ipynb)\n",
     "* [Formula](formula.ipynb)\n",
     "\n",
